; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_scan.c_aspect_to_string.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_scan.c_aspect_to_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { double, i64 }

@.str = private unnamed_addr constant [4 x i8] c"4:3\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"16:9\00", align 1
@aspect_to_string.arstr = internal global [32 x i8] zeroinitializer, align 16
@.str.2 = private unnamed_addr constant [7 x i8] c"%.2f:1\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"1:%.2f\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.TYPE_3__*)* @aspect_to_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @aspect_to_string(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca double, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = sitofp i64 %7 to double
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load double, double* %10, align 8
  %12 = fdiv double %8, %11
  store double %12, double* %4, align 8
  %13 = load double, double* %4, align 8
  %14 = fmul double %13, 9.000000e+00
  %15 = fptosi double %14 to i32
  switch i32 %15, label %18 [
    i32 12, label %16
    i32 16, label %17
  ]

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %31

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %31

18:                                               ; preds = %1
  %19 = load double, double* %4, align 8
  %20 = fcmp oge double %19, 1.000000e+00
  br i1 %20, label %21, label %25

21:                                               ; preds = %18
  %22 = load double, double* %4, align 8
  %23 = fptosi double %22 to i32
  %24 = call i32 @sprintf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @aspect_to_string.arstr, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0), i32 %23)
  br label %30

25:                                               ; preds = %18
  %26 = load double, double* %4, align 8
  %27 = fdiv double 1.000000e+00, %26
  %28 = fptosi double %27 to i32
  %29 = call i32 @sprintf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @aspect_to_string.arstr, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0), i32 %28)
  br label %30

30:                                               ; preds = %25, %21
  store i8* getelementptr inbounds ([32 x i8], [32 x i8]* @aspect_to_string.arstr, i64 0, i64 0), i8** %2, align 8
  br label %31

31:                                               ; preds = %30, %17, %16
  %32 = load i8*, i8** %2, align 8
  ret i8* %32
}

declare dso_local i32 @sprintf(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
